<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClassesActivity">


    <TextView
        android:id="@+id/class_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:text="Class Size"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_num_label" />

    <EditText
        android:id="@+id/subject_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/course_num_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/course_num_input"
        android:layout_width="190dp"
        android:layout_height="53dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/class_size_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_text_input"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/enter_class_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="40dp"
        android:onClick="onEnterClick"
        android:text="ENTER"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_class_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/class_size_label" />

    <Button
        android:id="@+id/cancel_class_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:onClick="onCancelClick"
        android:text="CANCEL"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/enter_class_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subject_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:text="Subject"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quarter_label" />

    <TextView
        android:id="@+id/course_num_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="Course #"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_label" />

    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="103dp"
        android:text="Year"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/year_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_classes_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="ADD CLASS"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/quarter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="57dp"
        android:text="Quarter"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/quarter_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_label" />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="114dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/quarter_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/year_label"
        app:layout_constraintTop_toTopOf="@+id/add_classes_header" />

    <Spinner
        android:id="@+id/quarter_spinner"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="125dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/course_num_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quarter_label"
        app:layout_constraintTop_toTopOf="@+id/year_label" />

    <Spinner
        android:id="@+id/class_size_dropdown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/class_size_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/class_size_label"
        app:layout_constraintTop_toTopOf="@+id/class_size_label" />


</androidx.constraintlayout.widget.ConstraintLayout>