...
        android:layout_marginEnd="17dp"
        android:backgroundTint="#31a037"
        android:onClick="submitClick"
        android:text="Submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <Button
        android:id="@+id/button_skip"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:backgroundTint="#b21f1f"
        android:onClick="skipClick"
        android:text="Skip"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
