...
        android:layout_marginBottom="42dp"
        android:text="My Courses"
        app:layout_constraintBottom_toTopOf="@+id/coursesRecyclerView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_place_holder_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="171dp"
        android:text="user_name"
...
